# VehiRegistra_backend

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg
alembic/: env.py
alembic/versions/: 345e6f1a1764_initial_migration.py
app/: __init__.py  main.py
app/api/: __init__.py  deps.py
app/api/v1/: router.py
app/api/v1/endpoints/: __init__.py  associations.py  auth.py  dashboard.py  external.py  inspections.py  reports.py  users.py  vehicles.py
app/core/: __init__.py  config.py  database.py  exceptions.py  logging.py  security.py
app/db/: __init__.py  create_user.py  seed.py
app/models/: __init__.py  association.py  base.py  enums.py  inspection.py  user.py  vehicle.py
app/schemas/: __init__.py  association.py  auth.py  common.py  dashboard.py  inspection.py  sunarp.py  user.py  vehicle.py
app/services/: __init__.py  association_service.py  auth_service.py  dashboard_service.py  inspection_service.py  storage_service.py  sunarp_service.py  user_service.py  vehicle_service.py
legacy_proxy/: NOTA.md  package-lock.json  package.json  server.js
tests/: conftest.py  test_sunarp_mapeo.py  test_users_profile.py  test_vehicles_search.py
